<resources>
    <string name="Billing_Cycle">Billing Cycle :</string>
    <string name="CANCEL">CANCEL</string>
    <string name="Click_here_to_go_Service_Dashboard">Click here to go Service Dashboard</string>
    <string name="CronetProviderClassName">com.google.android.gms.net.PlayServicesCronetProvider</string>
    <string name="DefaultServer">Default Server</string>
    <string name="DownloadFailed">Download Failed</string>
    <string name="English">Value</string>
    <string name="First_Time_Payment">First Time Payment :</string>
    <string name="Install_EPG">INSTALL EPG</string>
    <string name="N_A">N/A</string>
    <string name="Next_Due_Date">Next Due Date :</string>
    <string name="Payment_Method">Payment Method :</string>
    <string name="Product">Product :</string>
    <string name="Recurring_Amount">Recurring Amount :</string>
    <string name="Registration_Date">Registration Date :</string>
    <string name="Remove">Remove</string>
    <string name="Romanian">Value</string>
    <string name="Service_Buy_Now">| Service Buy Now</string>
    <string name="Service_Information">| Service Information</string>
    <string name="Speed">Speed</string>
    <string name="TrackType_audio">Audio</string>
    <string name="TrackType_metadata">Meta data</string>
    <string name="TrackType_subtitle">Subtitle</string>
    <string name="TrackType_timedtext">Timed text</string>
    <string name="TrackType_unknown">Unknown</string>
    <string name="TrackType_video">Video</string>
    <string name="VIPServer">VIP Server</string>
    <string name="VideoView_ar_16_9_fit_parent">16:9 / Fit parent</string>
    <string name="VideoView_ar_4_3_fit_parent">4:3 / Fit parent</string>
    <string name="VideoView_ar_aspect_fill_parent">Aspect / Fill parent</string>
    <string name="VideoView_ar_aspect_fit_parent">Aspect / Fit parent</string>
    <string name="VideoView_ar_aspect_wrap_content">Aspect / Wrap content</string>
    <string name="VideoView_ar_match_parent">Free / Fill parent</string>
    <string name="VideoView_error_button">OK</string>
    <string name="VideoView_error_text_invalid_progressive_playback">Invalid progressive playback</string>
    <string name="VideoView_error_text_unknown">Unknown</string>
    <string name="VideoView_player_AndroidMediaPlayer">Player: AndroidMediaPlayer</string>
    <string name="VideoView_player_IjkExoMediaPlayer">Player: IjkExoMediaPlayer</string>
    <string name="VideoView_player_IjkMediaPlayer">Player: IjkMediaPlayer</string>
    <string name="VideoView_player_none">Player: None</string>
    <string name="VideoView_render_none">Render: None</string>
    <string name="VideoView_render_surface_view">Render: SurfaceView</string>
    <string name="VideoView_render_texture_view">Render: TextureView</string>
    <string name="a_cache">a-cache</string>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="abi_mismatch">Preferred native ABI precedence of this device (%1$s) and ABI reported by native libraries (%2$s) mismatch</string>
    <string name="ability_to_change_player_and_player_settings">- Ability to change player and player settings</string>
    <string name="accept">Accept</string>
    <string name="access_denied">Access Denied, Click here to allow the permission</string>
    <string name="accouncement">Announcements</string>
    <string name="account">ACCOUNT</string>
    <string name="account_active_connections">Active Connections:</string>
    <string name="account_created">Account created successfully!</string>
    <string name="account_created_at">Created At:</string>
    <string name="account_expiry_date">Expiry Date:</string>
    <string name="account_info">ACCOUNT INFO</string>
    <string name="account_info_small">Account Info</string>
    <string name="account_is_trial">Is Trial:</string>
    <string name="account_max_connections">Max Connections:</string>
    <string name="account_status">Account Status:</string>
    <string name="account_username">Username:</string>
    <string name="act_code">Activation Code</string>
    <string name="action_clear_queue">Clear Queue</string>
    <string name="action_settings">Settings</string>
    <string name="activate">Activate</string>
    <string name="activate_continue">Continue</string>
    <string name="activate_on_tv">Log in on TV</string>
    <string name="activation">Activation</string>
    <string name="activation_code">Activation Code</string>
    <string name="active">Active</string>
    <string name="active_channel">Loading…</string>
    <string name="active_on_tv_text">Logging into Your TV App</string>
    <string name="active_on_tv_text_four">Enter the code or scan QR Code displayed on your TV screen into the app</string>
    <string name="active_on_tv_text_second">Launch the app on your TV device</string>
    <string name="active_on_tv_text_third">Go to the Enter Playlist Details screen.</string>
    <string name="add">Add</string>
    <string name="add_category_to_lock">Add Category to lock</string>
    <string name="add_certificate">Add Certificate</string>
    <string name="add_crt">Add Cert.file</string>
    <string name="add_crt_file">Add Certificate File</string>
    <string name="add_epg">Add EPG</string>
    <string name="add_epg_source">Add EPG Source</string>
    <string name="add_epg_xml">ADD EPG (.xml)</string>
    <string name="add_fav">: Added To Favourite</string>
    <string name="add_feedback_hint_text">Feedback</string>
    <string name="add_feedback_text">Add Feedback</string>
    <string name="add_new_external_player">Add New Player</string>
    <string name="add_new_profile">Add New Profile</string>
    <string name="add_new_user">Add New Playlist</string>
    <string name="add_player">ADD PLAYER</string>
    <string name="add_prof">Add Profile</string>
    <string name="add_profile">Add Profile</string>
    <string name="add_source">Add Source</string>
    <string name="add_to_fav">Add To Favourite</string>
    <string name="add_to_favourite">Add to Favourite</string>
    <string name="add_to_live">Move to Live</string>
    <string name="add_to_movies">Move to Movies</string>
    <string name="add_to_queue">Add to Queue</string>
    <string name="add_to_series">Move to Series</string>
    <string name="add_user">Add Playlist</string>
    <string name="added_external_player">Player added successfully</string>
    <string name="added_externalplayerSettings">Added External Players</string>
    <string name="added_to_live">Moved to Live</string>
    <string name="added_to_movies">Moved to Movies</string>
    <string name="added_to_series">Moved to Series</string>
    <string name="after_time_expried">Your Free Trial has been expired</string>
    <string name="alert">Alert!!</string>
    <string name="alert_mx_player">MX Player needs to be installed!</string>
    <string name="alert_player">needs to be installed!</string>
    <string name="alert_popup">Alert</string>
    <string name="alert_popup_local_data">Required Permission</string>
    <string name="alert_popup_local_data_ok">Open Settings</string>
    <string name="alert_vlc_player">VLC Player needs to be installed!</string>
    <string name="all">ALL</string>
    <string name="all_app_prompt">An external app tries to control %s. The app requesting access cannot be determined. Allowing this app grants ALL apps access.</string>
    <string name="all_channel">Show All Channels</string>
    <string name="all_channels">All Channels</string>
    <string name="all_logs">All Logs</string>
    <string name="all_movies_deleted_successfully">All Movies Deleted Successfully</string>
    <string name="all_series_deleted_successfully">All Episode Deleted Successfully</string>
    <string name="allowed_vpn_apps_info">Allowed VPN apps: %1$s</string>
    <string name="already_addedd">Already Added</string>
    <string name="already_crt_server">You already created profile for this server</string>
    <string name="already_exist_with_name">Already Exists with NAME:</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="already_registered_login">Already Registered? Log in here</string>
    <string name="amplify_storage_notification_channel_id">Transfer Channel</string>
    <string name="back_button">Back</string>
    <string name="cast_device_chooser_searching_for_devices">Finding devices</string>
    <string name="cast_device_chooser_title">Cast to</string>
    <string name="cast_wifi_warning_description">Make sure your device and the Cast device are on the same Wi-Fi network. \n\nLearn more</string>
    <string name="cast_zero_devices_found">No devices found.\n</string>
    <string name="cast_zero_devices_found_done_button_label">Done</string>
    <string name="cast_zero_devices_learn_more_description">Learn more about how you can cast your content to other devices.</string>
    <string name="choose_screen">Choose Multi-Screen Layout</string>
    <string name="choose_screen_layout">Multi-Screen Settings</string>
    <string name="close">Close</string>
    <string name="device_button_title">View Device Information</string>
    <string name="env_button_title">View Environment Information</string>
    <string name="file_issue_button_title">File Issue</string>
    <string name="font_family_medium">sans-serif-medium</string>
    <string name="font_family_thin">sans-serif-thin</string>
    <string name="log_level_filter">Filter by Log Level</string>
    <string name="logs_button_title">View Logs</string>
    <string name="multi_settings">Multi-Screen Settings</string>
    <string name="nav_play">Play</string>
    <string name="no_record_found">No Record Found</string>
    <string name="no_stream_found">No Channel Found</string>
    <string name="placeholder_logs">Search results will appear here…</string>
    <string name="remove_from_favourite">Remove From Favourite</string>
    <string name="save">Save</string>
    <string name="search_logs_hint">Enter search phrase…</string>
    <string name="select">Select</string>
    <string name="settings_small">Settings</string>
    <string name="show_popup">Show Multi-Screen Popup</string>
</resources>