<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <TextView
        android:id="@+id/tv_view_provider"
        android:visibility="invisible"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="linearView"/>
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/my_recycler_view"
        android:scrollbars="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>
    <TextView
        android:textSize="30dp"
        android:gravity="center"
        android:id="@+id/tv_noStream"
        android:visibility="invisible"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:text="@string/no_stream_found"
        android:layout_centerHorizontal="true"
        android:fontFamily="@string/font_family_thin"
        android:textAlignment="center"/>
    <TextView
        android:textSize="30dp"
        android:gravity="center"
        android:id="@+id/tv_no_record_found"
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:text="@string/no_record_found"
        android:layout_centerHorizontal="true"
        android:fontFamily="@string/font_family_thin"/>
</RelativeLayout>
