<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@drawable/dashboard_background"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <RelativeLayout
        android:id="@+id/rl_settings"
        android:visibility="visible"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp">
        <ImageView
            android:id="@+id/logo"
            android:focusable="false"
            android:layout_width="150dp"
            android:layout_height="42dp"
            android:src="@drawable/logo_white_long"/>
        <TextView
            android:textSize="16sp"
            android:textColor="@color/light_gray"
            android:gravity="center"
            android:id="@+id/separator"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="|"
            android:layout_toEndOf="@+id/logo"/>
        <TextView
            android:textSize="16sp"
            android:textColor="@color/light_gray"
            android:gravity="center"
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/settings_small"
            android:layout_marginStart="8dp"
            android:layout_toEndOf="@+id/separator"/>
        <TextView
            android:textSize="16sp"
            android:textColor="@color/light_gray"
            android:gravity="center"
            android:id="@+id/separator_second"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="|"
            android:layout_marginStart="8dp"
            android:layout_toEndOf="@+id/textView"/>
        <TextView
            android:textSize="16sp"
            android:textColor="@color/light_gray"
            android:gravity="center"
            android:id="@+id/textView_second"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/multi_settings"
            android:layout_marginStart="8dp"
            android:layout_toEndOf="@+id/separator_second"/>
    </RelativeLayout>
    <LinearLayout
        android:orientation="vertical"
        android:background="#802a3543"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="50dp"
        android:weightSum="4"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp">
        <TextView
            android:textSize="15sp"
            android:textColor="@color/white"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:text="@string/choose_screen_layout"
            android:layout_weight="0.8"/>
        <CheckBox
            android:textSize="16sp"
            android:textColor="@color/white"
            android:gravity="start|center_vertical"
            android:layout_gravity="start"
            android:id="@+id/show_popup"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:text="@string/show_popup"
            android:layout_weight="1"
            android:layout_marginStart="40dp"
            android:buttonTint="@color/white"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:weightSum="1"
            android:layout_weight="1"
            android:layout_marginStart="40dp">
            <TextView
                android:textSize="16sp"
                android:textColor="@color/white"
                android:gravity="start|center_vertical"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:text="@string/choose_screen"
                android:layout_weight="0.5"
                android:layout_marginStart="10dp"/>
            <Button
                android:textColor="@color/white"
                android:id="@+id/btn_multi"
                android:background="@drawable/blue_btn_effect"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="15dp"
                android:text="@string/select"
                android:layout_weight="0.2"/>
            <ImageView
                android:id="@+id/screen_pic"
                android:padding="8dp"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:src="@drawable/default_"
                android:layout_weight="0.2"/>
        </LinearLayout>
        <LinearLayout
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:weightSum="1"
            android:layout_weight="1"
            android:layout_marginStart="40dp">
            <Button
                android:textColor="@color/white"
                android:id="@+id/save"
                android:background="@drawable/back_btn_effect"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="10dp"
                android:text="@string/save"
                android:layout_weight="0.2"/>
            <Button
                android:textColor="@color/white"
                android:id="@+id/back"
                android:background="@drawable/logout_btn_effect"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="10dp"
                android:text="@string/back_button"
                android:layout_weight="0.2"/>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>
