<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:paddingLeft="24dp"
    android:paddingTop="24dp"
    android:paddingRight="24dp"
    android:paddingBottom="24dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <TextView
        android:textAppearance="@style/TextAppearance.CastMediaRouteChooserDialog.Title"
        android:ellipsize="end"
        android:gravity="center_vertical"
        android:id="@+id/cast_device_chooser_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:minHeight="52dp"
        android:text="@string/cast_device_chooser_title"
        android:singleLine="true"/>
    <ListView
        android:id="@+id/cast_device_chooser_list"
        android:paddingBottom="24dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:divider="@android:color/transparent"
        android:dividerHeight="0dp"/>
    <LinearLayout
        android:orientation="vertical"
        android:id="@android:id/empty"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:orientation="vertical"
            android:id="@+id/cast_device_chooser_searching"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:minHeight="150dp">
            <TextView
                android:textAppearance="@style/TextAppearance.CastMediaRouteChooserDialog.SecondaryText"
                android:layout_gravity="center"
                android:id="@+id/cast_device_chooser_search_status"
                android:paddingTop="40dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cast_device_chooser_searching_for_devices"/>
            <ProgressBar
                android:layout_gravity="center"
                android:id="@+id/cast_device_chooser_progress_bar"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:indeterminate="true"
                style="?android:attr/progressBarStyleHorizontal"/>
        </LinearLayout>
        <LinearLayout
            android:orientation="vertical"
            android:id="@+id/cast_device_chooser_zero_devices"
            android:visibility="gone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <TextView
                android:textAppearance="@style/TextAppearance.CastMediaRouteChooserDialog.SecondaryText"
                android:id="@+id/cast_device_chooser_zero_devices_status"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cast_zero_devices_found"/>
            <TextView
                android:textAppearance="@style/TextAppearance.CastMediaRouteChooserDialog.SecondaryText"
                android:id="@+id/cast_device_chooser_learn_more"
                android:paddingBottom="24dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cast_zero_devices_learn_more_description"/>
        </LinearLayout>
        <LinearLayout
            android:orientation="vertical"
            android:id="@+id/cast_device_chooser_wifi_warning"
            android:visibility="gone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <TextView
                android:textAppearance="@style/TextAppearance.CastMediaRouteChooserDialog.SecondaryText"
                android:id="@+id/cast_device_chooser_wifi_warning_description"
                android:paddingBottom="24dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cast_wifi_warning_description"/>
        </LinearLayout>
        <RelativeLayout
            android:gravity="bottom"
            android:id="@+id/footer"
            android:visibility="gone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <Button
                android:id="@+id/done_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minWidth="0dp"
                android:text="@string/cast_zero_devices_found_done_button_label"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                style="?android:attr/borderlessButtonStyle"/>
        </RelativeLayout>
    </LinearLayout>
</LinearLayout>
