<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:clickable="true"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="20dp"
    android:layout_marginTop="10dp"
    android:layout_marginRight="20dp"
    android:layout_marginBottom="20dp">
    <SearchView
        android:textSize="15sp"
        android:id="@+id/search_logs_field"
        android:paddingLeft="-55dp"
        android:paddingRight="0dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_toLeftOf="@+id/filter_logs"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:inputType="textNoSuggestions"
        android:iconifiedByDefault="false"
        android:queryHint="@string/search_logs_hint"
        android:paddingStart="-55dp"
        android:paddingEnd="0dp"
        android:layout_toStartOf="@+id/filter_logs"
        android:layout_alignParentStart="true"/>
    <Button
        android:id="@+id/filter_logs"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:text="@string/log_level_filter"
        android:layout_alignParentRight="true"
        android:layout_marginStart="5dp"
        android:layout_alignParentEnd="true"/>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="10dp"
        android:layout_below="@+id/search_logs_field">
        <HorizontalScrollView
            android:fadingEdgeLength="70dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:requiresFadingEdge="horizontal">
            <TextView
                android:textSize="15sp"
                android:textColor="?android:attr/textColorPrimaryInverse"
                android:id="@+id/logs_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/placeholder_logs"
                android:lineSpacingExtra="3dp"/>
        </HorizontalScrollView>
    </ScrollView>
</RelativeLayout>
