<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:id="@+id/rl_epg_layout"
    android:background="@color/dark_black2"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <RelativeLayout
        android:background="@color/white"
        android:layout_width="500dp"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginStart="200dp">
        <RelativeLayout
            android:id="@+id/ll_play"
            android:background="@drawable/selector_checkbox"
            android:focusable="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:textSize="20dp"
                android:textColor="@color/black"
                android:id="@+id/tv_play"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/nav_play"
                android:drawablePadding="10dp"
                android:drawableStart="@drawable/epg_play"
                android:fontFamily="@string/font_family_medium"
                android:layout_marginStart="25dp"/>
            <ImageView
                android:background="@color/black"
                android:layout_width="match_parent"
                android:layout_height="2px"
                android:layout_marginTop="10dp"
                android:layout_below="@+id/tv_play"/>
        </RelativeLayout>
        <RelativeLayout
            android:id="@+id/ll_move_to_next_cat"
            android:background="@drawable/selector_checkbox"
            android:focusable="true"
            android:visibility="gone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/ll_play">
            <TextView
                android:textSize="20dp"
                android:textColor="@color/black"
                android:id="@+id/tv_move_to_next_cat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/add_to_favourite"
                android:drawablePadding="10dp"
                android:drawableStart="@drawable/icon_favorite_add"
                android:fontFamily="@string/font_family_medium"
                android:layout_marginStart="25dp"/>
            <ImageView
                android:background="@color/black"
                android:layout_width="match_parent"
                android:layout_height="2px"
                android:layout_marginTop="15dp"
                android:layout_below="@+id/tv_move_to_next_cat"/>
        </RelativeLayout>
        <RelativeLayout
            android:id="@+id/ll_move_to_prev_cat"
            android:background="@drawable/selector_checkbox"
            android:focusable="true"
            android:visibility="gone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/ll_move_to_next_cat">
            <TextView
                android:textSize="20dp"
                android:textColor="@color/black"
                android:id="@+id/tv_move_to_prev_cat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/remove_from_favourite"
                android:drawablePadding="10dp"
                android:drawableStart="@drawable/icon_favorite_remove"
                android:fontFamily="@string/font_family_medium"
                android:layout_marginStart="25dp"/>
            <ImageView
                android:background="@color/black"
                android:layout_width="match_parent"
                android:layout_height="2px"
                android:layout_marginTop="15dp"
                android:layout_below="@+id/tv_move_to_prev_cat"/>
        </RelativeLayout>
        <RelativeLayout
            android:id="@+id/ll_close"
            android:background="@drawable/selector_checkbox"
            android:focusable="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/ll_move_to_prev_cat">
            <TextView
                android:textSize="20dp"
                android:textColor="@color/black"
                android:id="@+id/tv_close"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="15dp"
                android:text="@string/close"
                android:drawablePadding="10dp"
                android:drawableStart="@drawable/epg_stop"
                android:fontFamily="@string/font_family_medium"
                android:layout_marginStart="25dp"/>
        </RelativeLayout>
    </RelativeLayout>
</RelativeLayout>
